--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section hero-section">
         <div class="container">
           <div class="main-section">
             <p class="name-text">Косметологічна клініка</p>
@@ -63,19 +63,34 @@
       <section class="section" id="about">
         <div class="container">
           <div class="about">
-            <h2 class="about-text">
-              Перевтілюйтесь в <span class="accent">beauty zone!</span>
-            </h2>
-            <p class="about-text description">
-              Наша косметологічна клініка пропонує вам професійні послуги з
-              догляду за шкірою обличчя та тіла.
-            </p>
-            <p class="description">
-              B <span class="accented">beauty zone</span> ми гарантуємо найвищі
-              стандарти якості та приємний сервіс. Наші косметологічні процедури
-              та препарати допоможуть вам підтримувати свою красу та молодість.
-              З нами краса назавжди!
-            </p>
+            <div class="about-content">
+              <h2 class="about-text about-title">
+                Перевтілюйтесь в <span class="accent">beauty zone!</span>
+              </h2>
+              <p class="about-text description">
+                Наша косметологічна клініка пропонує вам професійні послуги з
+                догляду за шкірою обличчя та тіла.
+              </p>
+              <p class="description">
+                B <span class="accented">beauty zone</span> ми гарантуємо
+                найвищі стандарти якості та приємний сервіс. Наші косметологічні
+                процедури та препарати допоможуть вам підтримувати свою красу та
+                молодість. З нами краса назавжди!
+              </p>
+            </div>
+
+            <div class="example-images">
+              <img
+                class="about-image before-image"
+                src="./images/before.png"
+                alt="image-before"
+              />
+              <img
+                class="about-image after-image"
+                src="./images/after.png"
+                alt="image-after"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -167,7 +182,7 @@
       <div class="container">
         <div class="footer-nav">
           <nav class="section-links">
-            <a href=".index.html">
+            <a href="..index.html">
               <img src="./images/logo.svg" alt="Логотип клініки" />
             </a>
             <ul>
