--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,22 +25,25 @@
           <address>
             <ul class="link-list">
               <li>
-                <a href="#"></a
-                ><img
-                  src="./images/telephone-receiver_icon-icons.com_56033 1.png"
-                  alt="phone-icon"
-                />
+                <a href="#"
+                  ><svg width="32" height="32" class="header-icons">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="#"></a
-                ><img src="./images/uit_facebook-f.png" alt="facebook-icon" />
+                <a href="#"
+                  ><svg width="32" height="32" class="header-icons">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="#"></a
-                ><img
-                  src="./images/ph_instagram-logo-light.png"
-                  alt="instagram-icon"
-                />
+                <a href="#"
+                  ><svg width="32" height="32" class="header-icons">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </address>
@@ -103,10 +106,9 @@
             <ul class="reasons-container">
               <li class="reason-block">
                 <article class="reason-item">
-                  <img
-                    src="./images/game-icons_materials-science.png"
-                    alt="Іконка науки"
-                  />
+                  <svg width="48" height="48" class="reasons-icons">
+                    <use href="./images/icons.svg#icon-materials"></use>
+                  </svg>
                   <p class="reason">
                     Всі наші косметологи мають вищу медичну освіту та стаж
                     роботи від 5 років
@@ -115,10 +117,9 @@
               </li>
               <li class="reason-block">
                 <article class="reason-item">
-                  <img
-                    src="./images/medicinecosmeticsbottletreatment_109776 1.png"
-                    alt="Іконка будівлі"
-                  />
+                  <svg width="48" height="48" class="reasons-icons">
+                    <use href="./images/icons.svg#icon-cosmetics"></use>
+                  </svg>
                   <p class="reason">
                     Використовуємо тільки професійне обладнання та косметику,
                     перевірену часом
@@ -127,7 +128,9 @@
               </li>
               <li class="reason-block">
                 <article class="reason-item">
-                  <img src="./images/ph_crown-light.png" alt="Іконка корони" />
+                  <svg width="48" height="48" class="reasons-icons">
+                    <use href="./images/icons.svg#icon-crown"></use>
+                  </svg>
                   <p class="reason">
                     Наша мета - підкреслити переваги та приховати недоліки, а не
                     переробити
@@ -144,23 +147,33 @@
             <h2 class="title procedures-title">
               Наші <span class="accent">процедури</span>
             </h2>
+            <button type="button" class="carousel-button">
+              <svg width="18" height="15">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
             <ul class="procedures-list">
-              <li>
-                <article>
-                  <p class="procedure-name">Маски для обличчя</p>
+              <li class="procedure">
+                <article class="procedure-name">
+                  <p>Маски для обличчя</p>
                 </article>
               </li>
-              <li>
-                <article>
-                  <p class="procedure-name">Ін'єкції для обличчя</p>
+              <li class="procedure">
+                <article class="procedure-name">
+                  <p>Ін'єкції для обличчя</p>
                 </article>
               </li>
-              <li>
-                <article>
-                  <p class="procedure-name">Очищення обличчя</p>
+              <li class="procedure">
+                <article class="procedure-name">
+                  <p>Очищення обличчя</p>
                 </article>
               </li>
             </ul>
+            <button type="button" class="carousel-button">
+              <svg width="18" height="15">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
@@ -223,25 +236,25 @@
               <div class="icons-container">
                 <ul class="icons">
                   <li>
-                    <a href="#"></a
-                    ><img
-                      src="./images/telephone-receiver_icon-icons-light.com_56033 1.png"
-                      alt="phone-icon"
-                    />
+                    <a href="#"
+                      ><svg width="32" height="32" class="footer-icons">
+                        <use href="./images/icons.svg#icon-phone"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href="#"></a
-                    ><img
-                      src="./images/uit_facebook-f-light.png"
-                      alt="facebook-icon"
-                    />
+                    <a href="#"
+                      ><svg width="32" height="32" class="footer-icons">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href="#"></a
-                    ><img
-                      src="./images/ph_instagram-logo.png"
-                      alt="instagram-icon"
-                    />
+                    <a href="#"
+                      ><svg width="32" height="32" class="footer-icons">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
